--- a/FairWorks/appsettings.json
+++ b/FairWorks/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "db": "Data Source=DESKTOP-Q51EAVI\\SQLEXPRESS;Database=FairWorksDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
