--- a/FairWork/FairWorks.csproj
+++ b/FairWork/FairWorks.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>bd5d4ed8-41b2-4b4d-a8ee-620161b9e60a</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
