--- a/FairWorks.BLManager/FairWorks.BLManager.csproj
+++ b/FairWorks.BLManager/FairWorks.BLManager.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\FairWorks.Domain\FairWorks.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ValidationRules\" />
+  </ItemGroup>
+
 </Project>
