admincontroller eklendi ve footer navbar sidebar eklendi

--- a/FairWorks.WebUI/FairWorks.WebUI.csproj
+++ b/FairWorks.WebUI/FairWorks.WebUI.csproj
@@ -22,6 +22,8 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Employee\Data\" />
+    <Folder Include="Areas\Employee\Models\" />
     <Folder Include="Controllers\" />
     <Folder Include="Data\" />
     <Folder Include="Models\" />
